--- a/the-book/life-cycle/Cargo.toml
+++ b/the-book/life-cycle/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "main"
+name = "life-cycle"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.3"
-hello-cargo = { path = "../hello-cargo" }
-pkgs-crate = { path = "../pkgs-crate" }
-life-cycle = { path = "../life-cycle" }
