add(the-book): functional

--- a/the-book/main/Cargo.toml
+++ b/the-book/main/Cargo.toml
@@ -11,3 +11,4 @@ hello-cargo = { path = "../hello-cargo" }
 pkgs-crate = { path = "../pkgs-crate" }
 life-cycle = { path = "../life-cycle" }
 tester = { path = "../tester" }
+functional = { path = "../functional" }
