--- a/the-book/main/Cargo.toml
+++ b/the-book/main/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
+edition = "2018"
 name = "main"
 version = "0.1.0"
-edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+concurrent = {path = "../concurrent"}
+functional = {path = "../functional"}
+hello-cargo = {path = "../hello-cargo"}
+life-cycle = {path = "../life-cycle"}
+oop = {path = "../oop"}
+pkgs-crate = {path = "../pkgs-crate"}
 rand = "0.8.3"
-hello-cargo = { path = "../hello-cargo" }
-pkgs-crate = { path = "../pkgs-crate" }
-life-cycle = { path = "../life-cycle" }
-tester = { path = "../tester" }
-functional = { path = "../functional" }
-concurrent = { path = "../concurrent" }
+tester = {path = "../tester"}
